// <auto-generated />
using System;
using System.Net;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;
using NpgsqlTypes;
using ScanVul.Server.Infrastructure.Data;

#nullable disable

namespace ScanVul.Server.Infrastructure.Data.Migrations
{
    [DbContext(typeof(AppDbContext))]
    partial class AppDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "9.0.11")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("ComputerPackageInfo", b =>
                {
                    b.Property<long>("ComputerId")
                        .HasColumnType("bigint")
                        .HasColumnName("computer_id");

                    b.Property<long>("PackagesId")
                        .HasColumnType("bigint")
                        .HasColumnName("packages_id");

                    b.HasKey("ComputerId", "PackagesId")
                        .HasName("pk_computer_package_info");

                    b.HasIndex("PackagesId")
                        .HasDatabaseName("ix_computer_package_info_packages_id");

                    b.ToTable("computer_package_info", (string)null);
                });

            modelBuilder.Entity("ScanVul.Server.Domain.AgentAggregate.Entities.Agent", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<long>("ComputerId")
                        .HasColumnType("bigint")
                        .HasColumnName("computer_id");

                    b.Property<bool>("IsActive")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("boolean")
                        .HasDefaultValue(true)
                        .HasColumnName("is_active");

                    b.Property<DateTime>("LastPackagesScrapingAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("last_packages_scraping_at");

                    b.Property<DateTime>("LastPingAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("last_ping_at");

                    b.Property<Guid>("Token")
                        .HasColumnType("uuid")
                        .HasColumnName("token");

                    b.HasKey("Id")
                        .HasName("pk_agents");

                    b.HasIndex("ComputerId")
                        .HasDatabaseName("ix_agents_computer_id");

                    b.ToTable("agents", (string)null);
                });

            modelBuilder.Entity("ScanVul.Server.Domain.AgentAggregate.Entities.BduVulnerablePackage", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<string>("BduId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("bdu_id");

                    b.Property<long>("ComputerId")
                        .HasColumnType("bigint")
                        .HasColumnName("computer_id");

                    b.Property<bool>("IsFalsePositive")
                        .HasColumnType("boolean")
                        .HasColumnName("is_false_positive");

                    b.Property<long>("PackageInfoId")
                        .HasColumnType("bigint")
                        .HasColumnName("package_info_id");

                    b.HasKey("Id")
                        .HasName("pk_bdu_vulnerable_packages");

                    b.HasIndex("ComputerId")
                        .HasDatabaseName("ix_bdu_vulnerable_packages_computer_id");

                    b.HasIndex("PackageInfoId", "BduId", "ComputerId")
                        .IsUnique()
                        .HasDatabaseName("ix_bdu_vulnerable_packages_package_info_id_bdu_id_computer_id");

                    b.ToTable("bdu_vulnerable_packages", (string)null);
                });

            modelBuilder.Entity("ScanVul.Server.Domain.AgentAggregate.Entities.Commands.AgentCommand", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<long>("AgentId")
                        .HasColumnType("bigint")
                        .HasColumnName("agent_id");

                    b.Property<string>("AgentResponse")
                        .HasColumnType("text")
                        .HasColumnName("agent_response");

                    b.Property<string>("Body")
                        .IsRequired()
                        .HasColumnType("jsonb")
                        .HasColumnName("body");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<DateTime?>("SentAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("sent_at");

                    b.HasKey("Id")
                        .HasName("pk_agent_command");

                    b.HasIndex("AgentId")
                        .HasDatabaseName("ix_agent_command_agent_id");

                    b.ToTable("agent_command", (string)null);
                });

            modelBuilder.Entity("ScanVul.Server.Domain.AgentAggregate.Entities.Computer", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<string>("CpuName")
                        .HasColumnType("text")
                        .HasColumnName("cpu_name");

                    b.Property<IPAddress>("IpAddress")
                        .IsRequired()
                        .HasColumnType("inet")
                        .HasColumnName("ip_address");

                    b.Property<int?>("MemoryInMb")
                        .HasColumnType("integer")
                        .HasColumnName("memory_in_mb");

                    b.Property<string>("Name")
                        .HasColumnType("text")
                        .HasColumnName("name");

                    b.Property<int>("OperatingSystem")
                        .HasColumnType("integer")
                        .HasColumnName("operating_system");

                    b.HasKey("Id")
                        .HasName("pk_computers");

                    b.ToTable("computers", (string)null);
                });

            modelBuilder.Entity("ScanVul.Server.Domain.AgentAggregate.Entities.PackageInfo", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("name");

                    b.Property<string>("Version")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("version");

                    b.HasKey("Id")
                        .HasName("pk_package_infos");

                    b.HasIndex("Name", "Version")
                        .IsUnique()
                        .HasDatabaseName("ix_package_infos_name_version");

                    b.ToTable("package_infos", (string)null);
                });

            modelBuilder.Entity("ScanVul.Server.Domain.AgentAggregate.Entities.VulnerablePackage", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<long>("ComputerId")
                        .HasColumnType("bigint")
                        .HasColumnName("computer_id");

                    b.Property<string>("CveId")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("cve_id");

                    b.Property<bool>("IsFalsePositive")
                        .HasColumnType("boolean")
                        .HasColumnName("is_false_positive");

                    b.Property<long>("PackageInfoId")
                        .HasColumnType("bigint")
                        .HasColumnName("package_info_id");

                    b.HasKey("Id")
                        .HasName("pk_vulnerable_packages");

                    b.HasIndex("ComputerId")
                        .HasDatabaseName("ix_vulnerable_packages_computer_id");

                    b.HasIndex("PackageInfoId", "CveId", "ComputerId")
                        .IsUnique()
                        .HasDatabaseName("ix_vulnerable_packages_package_info_id_cve_id_computer_id");

                    b.ToTable("vulnerable_packages", (string)null);
                });

            modelBuilder.Entity("ScanVul.Server.Domain.PackageManagers.Entities.WingetPackage", b =>
                {
                    b.Property<string>("Id")
                        .HasColumnType("text")
                        .HasColumnName("id");

                    b.Property<long>("IdRowId")
                        .HasColumnType("bigint")
                        .HasColumnName("id_row_id");

                    b.Property<string>("LastVersion")
                        .HasColumnType("text")
                        .HasColumnName("last_version");

                    b.Property<long?>("LastVersionRowId")
                        .HasColumnType("bigint")
                        .HasColumnName("last_version_row_id");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("name");

                    b.Property<long>("NameRowId")
                        .HasColumnType("bigint")
                        .HasColumnName("name_row_id");

                    b.Property<NpgsqlTsVector>("SearchVector")
                        .ValueGeneratedOnAddOrUpdate()
                        .HasColumnType("tsvector")
                        .HasColumnName("search_vector")
                        .HasComputedColumnSql("to_tsvector('english', coalesce(\"name\", '') || ' ' || coalesce(\"id\", ''))", true);

                    b.HasKey("Id")
                        .HasName("pk_winget_packages");

                    b.HasIndex("SearchVector")
                        .HasDatabaseName("ix_winget_packages_search_vector");

                    NpgsqlIndexBuilderExtensions.HasMethod(b.HasIndex("SearchVector"), "GIN");

                    b.ToTable("winget_packages", (string)null);
                });

            modelBuilder.Entity("ScanVul.Server.Domain.Reports.Entities.VulnerabilityScanReport", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<string>("ObjectName")
                        .HasColumnType("text")
                        .HasColumnName("object_name");

                    b.HasKey("Id")
                        .HasName("pk_vulnerability_scan_reports");

                    b.ToTable("vulnerability_scan_reports", (string)null);
                });

            modelBuilder.Entity("ScanVul.Server.Domain.UserAggregate.Entities.User", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<bool>("IsActive")
                        .HasColumnType("boolean")
                        .HasColumnName("is_active");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("name");

                    b.Property<string>("Password")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("password");

                    b.HasKey("Id")
                        .HasName("pk_users");

                    b.ToTable("users", (string)null);
                });

            modelBuilder.Entity("ComputerPackageInfo", b =>
                {
                    b.HasOne("ScanVul.Server.Domain.AgentAggregate.Entities.Computer", null)
                        .WithMany()
                        .HasForeignKey("ComputerId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_computer_package_info_computers_computer_id");

                    b.HasOne("ScanVul.Server.Domain.AgentAggregate.Entities.PackageInfo", null)
                        .WithMany()
                        .HasForeignKey("PackagesId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_computer_package_info_package_infos_packages_id");
                });

            modelBuilder.Entity("ScanVul.Server.Domain.AgentAggregate.Entities.Agent", b =>
                {
                    b.HasOne("ScanVul.Server.Domain.AgentAggregate.Entities.Computer", "Computer")
                        .WithMany()
                        .HasForeignKey("ComputerId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_agents_computers_computer_id");

                    b.Navigation("Computer");
                });

            modelBuilder.Entity("ScanVul.Server.Domain.AgentAggregate.Entities.BduVulnerablePackage", b =>
                {
                    b.HasOne("ScanVul.Server.Domain.AgentAggregate.Entities.Computer", "Computer")
                        .WithMany("BduVulnerablePackages")
                        .HasForeignKey("ComputerId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_bdu_vulnerable_packages_computers_computer_id");

                    b.HasOne("ScanVul.Server.Domain.AgentAggregate.Entities.PackageInfo", "PackageInfo")
                        .WithMany()
                        .HasForeignKey("PackageInfoId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_bdu_vulnerable_packages_package_infos_package_info_id");

                    b.Navigation("Computer");

                    b.Navigation("PackageInfo");
                });

            modelBuilder.Entity("ScanVul.Server.Domain.AgentAggregate.Entities.Commands.AgentCommand", b =>
                {
                    b.HasOne("ScanVul.Server.Domain.AgentAggregate.Entities.Agent", "Agent")
                        .WithMany("Commands")
                        .HasForeignKey("AgentId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_agent_command_agents_agent_id");

                    b.Navigation("Agent");
                });

            modelBuilder.Entity("ScanVul.Server.Domain.AgentAggregate.Entities.VulnerablePackage", b =>
                {
                    b.HasOne("ScanVul.Server.Domain.AgentAggregate.Entities.Computer", "Computer")
                        .WithMany("VulnerablePackages")
                        .HasForeignKey("ComputerId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_vulnerable_packages_computers_computer_id");

                    b.HasOne("ScanVul.Server.Domain.AgentAggregate.Entities.PackageInfo", "PackageInfo")
                        .WithMany()
                        .HasForeignKey("PackageInfoId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_vulnerable_packages_package_infos_package_info_id");

                    b.Navigation("Computer");

                    b.Navigation("PackageInfo");
                });

            modelBuilder.Entity("ScanVul.Server.Domain.AgentAggregate.Entities.Agent", b =>
                {
                    b.Navigation("Commands");
                });

            modelBuilder.Entity("ScanVul.Server.Domain.AgentAggregate.Entities.Computer", b =>
                {
                    b.Navigation("BduVulnerablePackages");

                    b.Navigation("VulnerablePackages");
                });
#pragma warning restore 612, 618
        }
    }
}
